--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Yicong Hong"
-  avatar           : "profile.png"
+  avatar           : "me.jpg"
   bio              : "PhD student at the Australian National University"
   location         : "Canberra, Australia"
   employer         :
