--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,9 @@ main:
   - title: "Publications"
     url: /publications/
 
+  - title: "Thinking-VLN"
+    url: /thinking-vln/
+
 #   - title: "Talks"
 #     url: /talks/    
 
