--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Yicong Hong"
 title_separator          : "-"
 name                     : &name "Yicong Hong"
-description              : &description "PhD student at the Australian National University"
+description              : &description "PhD student at the Australian National University and the Australian Centre for Robotic Vision"
 url                      : https://yiconghong.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "https://github.com/YicongHong"
