--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Yicong Hong"
   avatar           : "me.jpg"
-  bio              : "PhD student at the Australian National University"
+  bio              : "PhD student at the Australian National University and the Australian Centre for Robotic Vision"
   location         : "Canberra, Australia"
   employer         :
   pubmed           : 
