--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Yicong Hong"
 title_separator          : "-"
 name                     : &name "Yicong Hong"
 description              : &description "PhD student at the Australian National University and the Australian Centre for Robotic Vision"
-url                      : https://yiconghong.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://www.yiconghong.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "https://github.com/YicongHong"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
